--- a/HEScoreMicro.UI/package.json
+++ b/HEScoreMicro.UI/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4999 --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,12 +18,19 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@ng-select/ng-select": "^13.9.1",
+    "bootstrap": "^5.3.3",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-json-viewer": "^3.2.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.4",
+    "@angular-devkit/build-angular": "^19.2.6",
+    "@angular-devkit/schematics": "^19.2.6",
+    "@angular/build": "^18.2.17",
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.0",
     "@types/jasmine": "~5.1.0",
